--- a/variance_analysis/variance_analysis.ipynb
+++ b/variance_analysis/variance_analysis.ipynb
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1104,7 @@
        "20.25"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,23 +1120,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "329.75"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SST = sum(( df.values - x__)**2).sum()\n",
+    "SST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23.2, 23.2]\n"
+      "[23.2, 17.299999999999997]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "174.0499999999999"
+       "174.05000000000013"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,15 +1165,15 @@
    "source": [
     "d1 = df[0:5]\n",
     "d2 = df[5:]\n",
-    "dataMean = [d1.mean().mean(),d1.mean().mean()]\n",
-    "print(dataMean)\n",
-    "SST = sum((dataMean-x__)**2).sum()*r*m\n",
-    "SST"
+    "x_i = [d1.mean().mean(),d2.mean().mean()]\n",
+    "print(x_i)\n",
+    "SSR = sum((x_i-x__)**2).sum()*r*m\n",
+    "SSR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1161,19 +1182,19 @@
        "array([22.4, 18.1])"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataMean1 = df.mean(axis=0).values\n",
-    "dataMean1"
+    "x_j = df.mean(axis=0).values\n",
+    "x_j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -1182,36 +1203,168 @@
        "92.44999999999989"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SSC = sum((dataMean1-x__)**2).sum()*k*m\n",
+    "SSC = sum((x_j-x__)**2).sum()*k*m\n",
     "SSC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "133.2499999999999"
+       "20.25"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_ = df.values.mean()\n",
-    "SSRC = sum((x_ - dataMean -dataMean1 +x__ )**2)*m\n",
+    "x_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ij = np.array([d1.mean().values,d2.mean().values])\n",
+    "x = x_ij+x__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.050000000000001425"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSRC = ((x[0,0]-x_i[0]-x_j[0])**2 + (x[0,1]-x_i[0]-x_j[1])**2+ (x[1,1]-x_i[1]-x_j[1])**2+ (x[1,0]-x_i[1]-x_j[0])**2)*m\n",
     "SSRC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63.19999999999998"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSE  = SST-SSR-SSC -SSRC\n",
+    "SSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fr:44.06329113924055\n",
+      "Fc:23.405063291139218\n",
+      "FRC:0.01265822784810163\n"
+     ]
+    }
+   ],
+   "source": [
+    "MSR = SSR/(k-1)\n",
+    "MSE = SSE/(m-1)/k/r\n",
+    "MSC = SSC/1\n",
+    "Fr = MSR/MSE\n",
+    "Fc = MSC/MSE\n",
+    "FRC = SSRC/1/MSE\n",
+    "print(\"Fr:\"+str(Fr))\n",
+    "print(\"Fc:\"+str(Fc))\n",
+    "print(\"FRC:\"+str(FRC))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pfr:0.0026729375641445672\n",
+      "pfc:0.00841302296398786\n",
+      "pfrc:0.9158401958222961\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.05\n",
+    "pfr = stats.f.sf(Fr, 1,m-1)   #行 F临界值\n",
+    "print(\"pfr:\"+str(pfr))\n",
+    "pfc = stats.f.sf(Fc, 1,m-1)   #行 F临界值\n",
+    "print(\"pfc:\"+str(pfc))\n",
+    "pfrc = stats.f.sf(FRC, 1,m-1)   #行 F临界值\n",
+    "print(\"pfrc:\"+str(pfrc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pfr<0.05)\n",
+    "print(pfc<0.05)\n",
+    "print(pfrc<0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "不同时间段有显著差异  \n",
+    "不同路段"
    ]
   }
  ],
